# Virtual_Field_Robot_Event_21

./: .gitignore  .gitmodules  2021_03_31_How_to_insert_robot_models_in_gazebo_and_gzweb.docx  README.md  TECHNICAL_CONTAINER_USAGE.md  cleanup_docker.sh  dump_my_container.sh  edit_my_container.sh  install.sh  install_requirements.sh  installed.sh  put_files_in_my_container.sh  save_my_container.sh  setup_competition_environment.sh  stop_competition_environment.sh
.github/workflows/: checkstyle.yml  main.yml  ros.yml
a_container/: Dockerfile
b_container/: Dockerfile
competition_environment/: README.md  build_for_compo.sh  change_my_start_cmd.sh  cleanup_docker.sh  command_glx  create_new_world.sh  dump_my_container.sh  edit_my_container.sh  install_requirements.sh  put_files_in_my_container.sh  save_my_container.sh  scene_params.txt  setup_for_compo_1.sh  start_competition_environment.sh  stop_competition_environment.sh  upload_my_container_publicly.sh
competition_environment/a_container/: Dockerfile  (+1 more)
competition_environment/task_3/07my_robot/farmbeast_robot/: CMakeLists.txt  package.xml
competition_environment/task_3/07my_robot/farmbeast_robot/launch/: description.launch  spawn_example_robot.launch
competition_environment/task_3/07my_robot/farmbeast_robot/urdf/: accessories.urdf.xacro  jackal.gazebo  jackal.urdf.xacro
competition_environment/task_3/07my_robot/farmbeast_robot/urdf/accessories/: sick_lms1xx_mount.urdf.xacro
competition_environment/task_3/examplemy_robot/example_robot_description/: package.xml
compose/: docker-compose.yml
example_robot/: README.md
jackal_fre/: README.md
simple_world/: CMakeLists.txt  README.md  package.xml  simple_world.world
task_1/: docker-compose.yml
task_2/: docker-compose.yml
task_3/: docker-compose.yml
task_4/: docker-compose.yml
virtual_maize_field/: .gitignore  README.md
(+189 files in other folders)
