<?xml version="1.0"?>
<package>
  <name>farmbeast_robot</name>
  <version>0.7.2</version>
  <description>URDF robot description for farmbeast_robot</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>lms1xx_fre</run_depend>
  <run_depend>pointgrey_camera_description</run_depend>

  <export>
  </export>
</package>
